[project]
name = "ttrsscli"
version = "0.0.4"
authors = [
  { name="Peter Reuterås", email="peter@reuteras.net" },
]
description = "Textual tool to access a Tiny Tiny RSS instance to read articles."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "cleanurl>=0.1.15",
    "httpx>=0.28.1",
    "markdownify>=0.14.1",
    "readwise-api>=0.3.0",
    "requests>=2.32.3",
    "textual[syntax]>=1.0.0",
    "toml>=0.10.2",
    "ttrss-python",
]
[project.scripts]
ttcli = "ttrsscli:main"
ttrsscli = "ttrsscli:main"

[project.urls]
Homepage = "https://github.com/reuteras/ttrsscli"
Issues = "https://github.com/reuteras/ttrsscli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ttrss-python = { git = "https://github.com/Vassius/ttrss-python.git", rev = "master" }

[dependency-groups]
dev = [
    "pylint>=3.3.4",
    "ruff>=0.9.5",
    "textual-dev>=1.7.0",
]

[tool.ruff]
target-version = "py311"
lint.select = [
    "PL",   # Pylint
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific
]
lint.ignore = [
    "E501",  # line too long, handled by black
]
fix = true

[tool.ruff.lint.pydocstyle]
convention="google"
